--- a/4-application/app/src/main/res/layout/fragment_home.xml
+++ b/4-application/app/src/main/res/layout/fragment_home.xml
@@ -49,7 +49,7 @@
 
     <ListView
         android:id="@+id/searchResults"
-        android:layout_width="409dp"
+        android:layout_width="wrap_content"
         android:layout_height="300dp"
         android:layout_marginBottom="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
