Can mark a book as read, TBR, or reading

--- a/4-application/app/src/main/res/layout/fragment_book_info.xml
+++ b/4-application/app/src/main/res/layout/fragment_book_info.xml
@@ -55,7 +55,7 @@
         android:gravity="top"
         android:inputType="textMultiLine"
         android:lines="10"
-        android:maxLength="500"
+        android:maxLength="5000"
         android:maxLines="10"
         android:text="Review"
         app:layout_constraintEnd_toEndOf="parent"
@@ -63,7 +63,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Spinner
-        android:id="@+id/spinner"
+        android:id="@+id/book_info_status_spinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="150dp"
@@ -73,7 +73,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/book_info_submit_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="570dp"
