--- a/4-application/app/src/main/res/layout/fragment_read.xml
+++ b/4-application/app/src/main/res/layout/fragment_read.xml
@@ -7,13 +7,23 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
+<!--    <ListView-->
+<!--        android:id="@+id/list_read"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="match_parent"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent" />-->
+
     <ListView
-        android:id="@+id/list_read"
+        android:id="@+id/custom_list_reading"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:listitem="@layout/list_item"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
