--- a/4-application/app/src/main/res/layout/list_item.xml
+++ b/4-application/app/src/main/res/layout/list_item.xml
@@ -41,7 +41,7 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/reading_date_started"
+            android:id="@+id/reading_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="15dp"
