--- a/4-application/app/src/main/res/layout/list_item.xml
+++ b/4-application/app/src/main/res/layout/list_item.xml
@@ -24,7 +24,7 @@
 
                 <TextView
                     android:id="@+id/reading_title"
-                    android:layout_width="wrap_content"
+                    android:layout_width="180dp"
                     android:layout_height="wrap_content"
                     android:text="title here"/>
 
@@ -46,7 +46,7 @@
             android:layout_height="wrap_content"
             android:padding="15dp"
             android:layout_alignParentRight="true"
-            android:text="date started here"/>
+            android:text=""/>
 
     </RelativeLayout>
 
