--- a/4-application/app/src/main/res/layout/list_item.xml
+++ b/4-application/app/src/main/res/layout/list_item.xml
@@ -30,7 +30,7 @@
 
                 <TextView
                     android:id="@+id/reading_authors"
-                    android:layout_width="wrap_content"
+                    android:layout_width="180dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:text="author here"/>
