--- a/4-application/app/src/main/res/layout/fragment_book_info.xml
+++ b/4-application/app/src/main/res/layout/fragment_book_info.xml
@@ -17,9 +17,10 @@
 
     <TextView
         android:id="@+id/book_info_title"
-        android:layout_width="wrap_content"
+        android:layout_width="180dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_marginStart="200dp"
+        android:layout_marginTop="40dp"
         android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -27,9 +28,10 @@
 
     <TextView
         android:id="@+id/book_info_authors"
-        android:layout_width="wrap_content"
+        android:layout_width="180dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_marginStart="200dp"
+        android:layout_marginTop="90dp"
         android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -40,7 +42,7 @@
         android:id="@+id/date_started"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="200dp"
+        android:layout_marginTop="220dp"
         android:layout_marginEnd="200dp"
         android:ems="15"
         android:focusable="false"
@@ -56,7 +58,7 @@
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="200dp"
-        android:layout_marginTop="200dp"
+        android:layout_marginTop="220dp"
         android:ems="15"
         android:focusable="false"
         android:hint="Date Completed"
@@ -69,7 +71,7 @@
         android:id="@+id/book_info_rating"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="250dp"
+        android:layout_marginTop="270dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -79,14 +81,14 @@
         android:id="@+id/book_info_review"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="300dp"
+        android:layout_marginTop="320dp"
         android:ems="10"
         android:gravity="top"
+        android:hint="Add Review"
         android:inputType="textMultiLine"
         android:lines="9"
         android:maxLength="5000"
         android:maxLines="9"
-        android:hint="Add Review"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -95,6 +97,7 @@
         android:id="@+id/book_info_status_spinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="140dp"
         android:layout_marginTop="150dp"
         android:entries="@array/bookinfospinneroptions"
         app:layout_constraintEnd_toEndOf="parent"
@@ -111,6 +114,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ImageView
+        android:id="@+id/book_info_small_cover"
+        android:layout_width="120dp"
+        android:layout_height="196dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="200dp"
+        android:background="@color/black"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
