--- a/4-application/app/src/main/res/layout/activity_main.xml
+++ b/4-application/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,9 @@ taken from https://www.geeksforgeeks.org/bottom-navigation-bar-in-android/-->
         android:id="@+id/bottomNavigationView"
         android:layout_width="match_parent"
         android:layout_height="75dp"
+        android:background="@color/nav_color"
+        app:itemIconTint="@color/white"
+        app:itemTextColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
