--- a/4-application/app/src/main/res/layout/fragment_book_info.xml
+++ b/4-application/app/src/main/res/layout/fragment_book_info.xml
@@ -21,24 +21,25 @@
         android:id="@+id/book_info_title"
         android:layout_width="180dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="200dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="40dp"
-        android:text="TextView"
+        android:textStyle="bold"
+        android:textSize="18dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/book_info_small_cover"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/book_info_authors"
         android:layout_width="180dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="200dp"
-        android:layout_marginTop="90dp"
-        android:text="TextView"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
+        android:textSize="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/book_info_small_cover"
+        app:layout_constraintTop_toBottomOf="@+id/book_info_title" />
 
     <EditText
         android:id="@+id/date_started"
@@ -99,12 +100,12 @@
         android:id="@+id/book_info_status_spinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="140dp"
-        android:layout_marginTop="150dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="50dp"
         android:entries="@array/bookinfospinneroptions"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/book_info_small_cover"
+        app:layout_constraintTop_toBottomOf="@+id/book_info_authors" />
 
     <Button
         android:id="@+id/book_info_submit_button"
@@ -122,7 +123,8 @@
         android:layout_height="196dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="200dp"
-        android:background="@color/black"
+        android:background="@color/nav_color"
+        android:padding="1dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
