--- a/4-application/app/src/main/res/layout/home_list_item.xml
+++ b/4-application/app/src/main/res/layout/home_list_item.xml
@@ -17,6 +17,8 @@
             android:layout_width="49dp"
             android:layout_height="81dp"
             android:layout_marginEnd="190dp"
+            android:background="@color/nav_color"
+            android:padding="1dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -29,10 +31,13 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:text="title here"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.468"
             app:layout_constraintStart_toEndOf="@+id/iv_home_cover"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.258" />
 
         <TextView
             android:id="@+id/tv_home_authors"
@@ -40,11 +45,10 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:text="author here"
-            app:layout_constraintBottom_toTopOf="@+id/tv_home_title"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/iv_home_cover"
-            app:layout_constraintTop_toTopOf="parent" />
-
+            app:layout_constraintTop_toBottomOf="@+id/tv_home_title" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
