--- a/4-application/app/src/main/res/values/colors.xml
+++ b/4-application/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="off_white">#E8DBDB</color>
+    <color name="nav_color">#9AB9CE</color>
 </resources>
