--- a/4-application/app/src/main/res/layout/fragment_book_info.xml
+++ b/4-application/app/src/main/res/layout/fragment_book_info.xml
@@ -100,10 +100,11 @@
         android:id="@+id/book_info_status_spinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="50dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="70dp"
         android:entries="@array/bookinfospinneroptions"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.89"
         app:layout_constraintStart_toEndOf="@+id/book_info_small_cover"
         app:layout_constraintTop_toBottomOf="@+id/book_info_authors" />
 
@@ -144,6 +145,9 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="630dp"
+        android:layout_marginBottom="21dp"
+        android:padding="7dp"
+        app:layout_constraintBottom_toTopOf="@+id/book_info_quotes_heading"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
