Added sorts to other lists and fixed validation

--- a/4-application/app/src/main/res/layout/fragment_book_info.xml
+++ b/4-application/app/src/main/res/layout/fragment_book_info.xml
@@ -136,6 +136,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="600dp"
         android:text="@string/description_text"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -158,6 +159,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="@string/quotes_heading"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/book_info_description" />
