--- a/4-application/app/src/main/res/layout/fragment_read.xml
+++ b/4-application/app/src/main/res/layout/fragment_read.xml
@@ -39,7 +39,8 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
         android:text="@string/sort_by_text"
-        android:textStyle="bold"
+        android:textSize="16dp"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toStartOf="@+id/sort_spinner"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
